[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "dep_builder"
dynamic = [
    "version",
    "readme",
]
description = "Scripts for building nano-qmflows C/C++ dependencies."
license = { file = "LICENSE.md" }
authors = [
    { name = "Bas van Beek", email = "bas.vanbeek@hotmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
requires-python = ">=3.7"
dependencies = [
    "requests",
    "packaging",
]

[project.urls]
Homepage = "https://github.com/nlesc-nano/nano-qmflows-manylinux"
"Bug Tracker" = "https://github.com/nlesc-nano/nano-qmflows-manylinux/issues"
Documentation = "https://nano-qmflows-manylinux.readthedocs.io/en/latest/"

[project.optional-dependencies]
doc = [
    "sphinx>=4.1",
    "sphinx_rtd_theme",
]
lint = [
    "pydocstyle[toml]>=6.1",
    "flake8>=5",
    "Flake8-pyproject>=1.0.1",
    "mypy",
    "types-requests",
]

[tool.setuptools.packages.find]
include = ["dep_builder*"]

[tool.setuptools.package-data]
dep_builder = ["py.typed"]

[tool.setuptools.dynamic]
readme = { file = ["README.rst"], content-type = "text/x-rst" }

[tool.setuptools_scm]
write_to = "dep_builder/_version.py"

[tool.mypy]
show_error_codes = true
strict = true

[tool.pydocstyle]
add_ignore = ["D401"]

[tool.flake8]
max-line-length = 125
exclude = ["dep_builder/_version.py"]
